# quest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  NOTICE  README.md  ReleaseNotes.txt  build  configure  version
cmake/: CXX11.cmake  FindACML.cmake  FindACMLMP.cmake  FindARPACK.cmake  FindATLAS.cmake  FindBLAS.cmake  FindLAPACK.cmake  FindLinearAlgebraLibs.cmake  FindMKL.cmake  FindOpenBLAS.cmake  FindSuperLU5.cmake  Versioning.cmake  boost_components.cmake
cmake/local/: Armadillo.cmake
cmake/machines/: fir  rivanna
contrib/tmfsc/: CMakeLists.txt  NOTICE
contrib/tmfsc/lib/: CMakeLists.txt
contrib/tmfsc/lib/include/: DiracCyclotron.hpp  DiracElectron.hpp  device.h  particle.hpp  relativisticparticle.hpp  segment.h  simulator.h  tmfsc.h
contrib/tmfsc/lib/src/: DiracCyclotron.cpp  DiracElectron.cpp  device.cpp  particle.cpp  relativisticparticle.cpp  segment.cpp  simulator.cpp
contrib/tmfsc/lib/tests/: test_device.cpp  test_segments.cpp  test_simulator.cpp
contrib/tmfsc/pylib/: CMakeLists.txt  pydevice.cpp  pydevice.h  pysimulator.cpp  pysimulator.h  pytmfsc.cpp  pytmfsc.h
contrib/tmfsc/simulators/python/: hallbar.py  simulate
contrib/tmfsc/tests/: tmfsc_simu.py
dependencies/: CMakeLists.txt
dependencies/armadillo/: .gitignore  CMakeLists.txt
dependencies/arpack/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt
dependencies/lapack/: CMakeLists.txt
dependencies/superlu/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile  qmicad.doxy  qmicad.in.doxy
doc/html/: AtomicStruct_8h_source.html  BandStruct_8h_source.html  CohRgfa_8h_source.html  ConsoleProgressBar_8h_source.html  Exception_8h_source.html  KPoints_8h_source.html  Lattice_8h_source.html  NegfEloop_8h_source.html  NegfResult_8h_source.html  NullDeleter_8hpp_source.html  Printable_8hpp_source.html  (+203 more)
include/: config.h.in  qmicad.hpp
lib/: CMakeLists.txt
lib/doc/: quest.in.doxy
lib/include/: config.in.h  qmicad.hpp  quest.hpp
lib/include/atoms/: AtomicStruct.h  Lattice.h
lib/include/band/: BandStruct.h
lib/include/cache/: cache.hpp
lib/include/hamiltonian/: hamiltonian.hpp
lib/include/hamiltonian/kp/: TI3DKpParams.h  dirackp.h  graphenekp.h  tikp.h  tikp4.h
lib/include/hamiltonian/tb/: graphenetb.h
lib/include/kpoints/: KPoints.h
lib/include/maths/: arma.hpp  constants.h  fermi.hpp  geometry.hpp  grid.hpp  svec.h  trace.hpp  vecop.hpp
lib/include/negf/: CohRgfLoop.h  CohRgfa.h  RgfResult.h  computegs.h
lib/include/parallel/: Workers.h
lib/include/potential/: linearPot.h  poissonPot.h  potential.h  terminal.h
lib/include/tmfsc/: DiracCyclotron.hpp  DiracElectron.hpp  device.h  particle.hpp  segment.h  simulator.h  tmfsc.h
lib/include/utils/: ConsoleProgressBar.h  Exception.h  Printable.hpp  Timer.h  myenums.hpp  random.h  serialize.hpp  std.hpp  stringutils.h
lib/src/: qmicad.cpp  quest.cpp
lib/src/atoms/: AtomicStruct.cpp  Lattice.cpp
lib/src/band/: BandStruct.cpp
lib/src/hamiltonian/: hamiltonian.cpp
lib/src/hamiltonian/kp/: TI3DKpParams.cpp  dirackp.cpp  graphenekp.cpp  tikp.cpp  tikp4.cpp
lib/src/hamiltonian/tb/: graphenetb.cpp
lib/src/kpoints/: KPoints.cpp
lib/src/maths/: grid.cpp  svec.cpp
lib/src/negf/: CohRgfLoop.cpp  CohRgfa.cpp  RgfResult.cpp  computegs.cpp
lib/src/parallel/: Workers.cpp
lib/src/potential/: linearPot.cpp  poissonPot.cpp  potential.cpp  terminal.cpp
lib/src/tmfsc/: DiracCyclotron.cpp  DiracElectron.cpp  device.cpp  particle.cpp  segment.cpp  simulator.cpp
lib/src/utils/: property.cpp  random.cpp  stringutils.cpp  vout.cpp
lib/tests/: test_random.cpp
logger/: CMakeLists.txt
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
pyengine/: CMakeLists.txt
pyengine/src/: PyEngine.cpp  PyEngine.hpp  read_python.h
pyengine/tests/unit_tests/: CMakeLists.txt  test_PyEngine.cpp
pylib/: CMakeLists.txt  boostpython.hpp  pyqmicad.cpp  pyqmicad.h  pyquest.cpp  pyquest.h
pylib/atoms/: PyAtomicStruct.cpp  PyAtomicStruct.h  PyLattice.cpp
pylib/band/: PyBandStruct.cpp  PyBandStruct.h
pylib/hamiltonian/: pyhamiltonian.cpp
pylib/hamiltonian/kp/: pygraphenekp.cpp  pyti3dkp.cpp  pytikp.cpp  pytikp4.cpp
pylib/hamiltonian/tb/: pygraphenetb.cpp
pylib/kpoints/: PyKPoints.cpp
pylib/maths/: pyarma.cpp  pygeometry.cpp  pygrid.cpp  pysvec.cpp
pylib/negf/: PyCohRgfLoop.cpp  PyCohRgfLoop.h  PyCohRgfa.cpp  PyRgfResult.cpp
pylib/npyarma/: npyarma.cpp  npyarma.h
pylib/parallel/: PyWorkers.cpp
pylib/potential/: pylinearPot.cpp  pypoissonPot.cpp  pypotential.cpp
pylib/python/: TransportResult.py  __init__.py
pylib/tmfsc/: CMakeLists.txt  pydevice.cpp  pydevice.h  pysimulator.cpp  pysimulator.h  pytmfsc.cpp  pytmfsc.h  pyutils.hpp
pylib/utils/: PyPrintable.cpp  PyTimer.cpp  pymyenums.cpp  pyproperty.cpp  pystringutils.cpp  pyvout.cpp  vector2list.cpp  vector2list.h
python/: __init__.py  boostpython.hpp  pyqmicad.cpp  pyqmicad.h  qmicad.cpp
qlog/: CMakeLists.txt
quester/: CMakeLists.txt  PyCommander.cpp  PyEngine.cpp  PyEngine.hpp  QuesterApp.cpp  QuesterApp.hpp  read_python.cpp
quester/src/: PyCommander.hpp  QuesterApp.cpp  QuesterApp.hpp  main.cpp  main.h
simulators/cpp/tmfsc/: CMakeLists.txt
simulators/cpp/tmfsc/include/: device.h  intersect.h  segment.h  simulator.h
simulators/cpp/tmfsc/lib/src/: segment.cpp
simulators/cpp/tmfsc/pylib/: pydevice.h  pytmfsc.cpp
simulators/cpp/tmfsc/src/: device.cpp  intersect.cpp  segment.cpp  simulator.cpp
src/: qmicad.cpp
test/: grkp.py  test.py  test_dirac_band.py  test_dirac_transport.py  test_dirac_transport_nonuni.py
tests/: CMakeLists.txt  plot_geom.m  plot_trans.m  test_dirac_band.py  test_dirac_transport.py  test_dirac_transport_contact_width.py  test_dirac_transport_nonuni.py  test_poisson.py
tests/unit_tests/: CMakeLists.txt  test_device.cpp  test_random.cpp  test_segments.cpp  test_simulator.cpp  test_tmfsc_device.cpp  test_tmfsc_segments.cpp  test_tmfsc_simulator.cpp  test_utils_stds_linspace.cpp
(+368 files in other folders)
